src/human_study/program_27/python_err_msg.txt
File "./seq2parse/human_study/program_27/original.py", line 4
    (print) a-b-c
            ^
SyntaxError: invalid syntax
